substantially reduce concurrency, for improved reliability misc cloud tasks improvements